--- a/index.html
+++ b/index.html
@@ -5,8 +5,49 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+<header class="page-header">
+  <nav class="navigation">
+<ul class="navigation-list">
+  <li class="navigtion-item">
+    <a class="navigation-link" href="#">Главная</a>
+    </li>
+    <li class="navigtion-item">
+      <a class="navigation-link" href="#">О Седоне</a>
+      </li>
+      <li class="navigtion-item">
+        <a class="navigation-link" href="catalog.html">Гостиницы</a>
+        </li>
+        </ul>
+        <ul class="navigation-user">
+          <li class="navigtion-item">
+            <a class="navigation-link" href="#">
+            <span class="visually-hidden">Поиск</span>
+            </a>
+            </li>
+            <li class="navigtion-item">
+              <a class="navigation-link" href="#">
+                <span class="visually-hidden">Избранное</span>
+              </a>
+              </li>
+              <li class="navigtion-item">
+                <a class="navigation-link" href="#">
+                 <span class="visually-hidden">Забронировать</span>
+                </a>
+                </li>
+    </ul>
+  </nav>
+</header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+<main class="main-index">
+<h1 class="visually-hidden">Добро пожаловать в Седону</h1>
+<img class="logo" src="" alt="логотип Седона">
+<h2>Седона — небольшой городок в Аризоне,
+  заслуживающий большего!</h2>
+  <h3>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</h3>
+</main>
+<section class="advantages">
 
+
+</section>
   </body>
 </html>
