--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
   <li class="advantages-img">
     <img src="#" alt="Мост дьявола">
 </li>
+</ul>
+<ul class="advatages-item">
 <li class="advatages-item">
     <img src="#" alt="">
     <h3 class="advantages-title">Жилье</h3>
