--- a/index.html
+++ b/index.html
@@ -1,143 +1,176 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-<header class="page-header">
-  <nav class="navigation">
-<ul class="navigation-list">
-  <li class="navigtion-item">
-    <a class="navigation-link" href="#">Главная</a>
-    </li>
-    <li class="navigtion-item">
-      <a class="navigation-link" href="#">О Седоне</a>
-      </li>
-      <li class="navigtion-item">
-        <a class="navigation-link" href="catalog.html">Гостиницы</a>
-        </li>
+    <header class="page-header">
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigtion-item">
+            <a class="navigation-link" href="#">Главная</a>
+          </li>
+          <li class="navigtion-item">
+            <a class="navigation-link" href="#">О Седоне</a>
+          </li>
+          <li class="navigtion-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          </li>
         </ul>
         <ul class="navigation-user">
           <li class="navigtion-item">
             <a class="navigation-link" href="#">
-            <span class="visually-hidden">Поиск</span>
+              <span class="visually-hidden">Поиск</span>
             </a>
-            </li>
-            <li class="navigtion-item">
-              <a class="navigation-link" href="#">
-                <span class="visually-hidden">Избранное</span>
+          </li>
+          <li class="navigtion-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Избранное</span>
+            </a>
+          </li>
+          <li class="navigtion-item">
+            <a class="navigation-link" href="#">
+  <span class="visually-hidden">Забронировать</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="main-index">
+      <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
+      <img class="logo" src="" alt="логотип Седона" />
+      <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advantages-list">
+          <li class="avantages-item">
+            <h3 class="advantages-title">Настоящий городок</h3>
+            <p class="advantages-text">
+              Седона — не аттракцион для туристов, там течёт своя жизнь
+            </p>
+
+            <img src="#" alt="Кафе в городе Седона" />
+          </li>
+          <li class="avantages-item">
+            <h3 class="advantages-title">Небольшая площадь</h3>
+            <p class="advantages-text">
+              Все достопримечательности находятся очень близко
+            </p>
+          </li>
+          <li class="avantages-item">
+            <h3 class="advantages-title">Красивая дорога</h3>
+            <p class="advantages-text">
+              Ехать в Седону из Лас-Вегаса совсем не скучно!
+            </p>
+          </li>
+          <li class="avantages-item">
+            <h3 class="advantages-title">Мало туристов</h3>
+            <p class="advantages-text">
+              Большинство едет в Гранд Каньон и толпится там
+            </p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Там есть мост дьявола</h3>
+            <p class="advantages-text">
+              Да, по нему можно пройти! Если вы осмелитесь, разумеется
+            </p>
+          </li>
+          <li class="advantages-img">
+            <img src="#" alt="Мост дьявола" />
+          </li>
+        </ul>
+        <ul class="advatages-item">
+          <li class="advatages-item">
+            <img src="#" alt="" />
+            <h3 class="advantages-title">Жилье</h3>
+            <p class="advantages-text">
+              Рекомендуем пожить в настоящем мотеле, всё как в кино!
+            </p>
+          </li>
+          <li class="advatages-item">
+            <img src="#" alt="" />
+            <h3 class="advantages-title">Еда</h3>
+            <p class="advantages-text">
+              Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+            </p>
+          </li>
+          <li class="advatages-item">
+            <img src="#" alt="" />
+            <h3 class="advantages-title">Сувениры</h3>
+            <p class="advantages-text">
+              Не только китайского, но и настоящего местного производства!
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <section class="services">
+          <h2 class="visualli hidden">Каталог гостиниц</h2>
+          <h3 class="services-title">Заинтересовались?</h3>
+          <p class="services-title">
+            Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+            предложения гостиниц в Седоне
+          </p>
+          <span class="visualli hidden">Поиск гостиниц</span>
+          <a class="button" href="catalog.html">ПОИСК ГОСТИНИЦЫ В седоне</a>
+        </section>
+      </section>
+    </main>
+    <footer class="page footer">
+      <section class="newslatter">
+        <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
+        <p class="page-footer-title">
+          Только полезная информация и никакого спама, честное бойскаутское!
+        </p>
+        <form
+          class="newslatter-form"
+          action="https://echo.htmlacademy.ru/."
+          method="post"
+        >
+          <input
+            class="field"
+            placeholder="Ваш e-mail"
+            type="email"
+            name="newslatter-email"
+            id="newslatter-email"
+            required
+          />
+          <button class="button newslatter-button" type="submit">
+            Подписаться
+          </button>
+        </form>
+        <section class="footer-social">
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="button" href="#">
+                <span class="visualli-hidden">Вконтакте</span>
               </a>
-              </li>
-              <li class="navigtion-item">
-                <a class="navigation-link" href="#">
-                 <span class="visually-hidden">Забронировать</span>
-                </a>
-                </li>
-    </ul>
-  </nav>
-</header>
-
-<main class="main-index">
-<h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
-<img class="logo" src="" alt="логотип Седона">
-<h2>Седона — небольшой городок в Аризоне,
-  заслуживающий большего!</h2>
-  <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-
-<section class="advantages">
- <h2 class="visually-hidden">Преимущества</h2>
-<ul class="advantages-list">
-  <li class="avantages-item">
-    <h3 class="advantages-title">Настоящий городок</h3>
-    <p class="advantages-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-  </li>
-<li class="advantages-img">
-  <img src="#" alt="Кафе в городе Седона">
-</li>
-  <li class="avantages-item">
-    <h3 class="advantages-title">Небольшая площадь</h3>
-    <p class="advantages-text">Все достопримечательности находятся очень близко</p>
-  </li>
-<li class="avantages-item">
-  <h3 class="advantages-title">Красивая дорога</h3>
-  <p class="advantages-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-  </li>
-<li class="avantages-item">
-  <h3 class="advantages-title">Мало туристов</h3>
-  <p class="advantages-text">Большинство едет в Гранд Каньон и толпится там</p>
-</li>
-<li class="advantages-item">
-    <h3 class="advantages-title">Там есть мост дьявола</h3>
-    <p class="advantages-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-</li>
-  <li class="advantages-img">
-    <img src="#" alt="Мост дьявола">
-</li>
-</ul>
-<ul class="advatages-item">
-<li class="advatages-item">
-    <img src="#" alt="">
-    <h3 class="advantages-title">Жилье</h3>
-    <p class="advantages-text">Рекомендуем пожить в настоящем мотеле,
-      всё как в кино!</p>
-</li>
-<li class="advatages-item">
-    <img src="#" alt="">
-    <h3 class="advantages-title">Еда</h3>
-    <p class="advantages-text">Всегда заказывайте
-      топовый фирменный бургер, вы не разочаруетесь!</p>
-    </li>
-<li class="advatages-item">
-    <img src="#" alt="">
-    <h3 class="advantages-title">Сувениры</h3>
-    <p class="advantages-text">Не только китайского,
-      но и настоящего местного производства!</p>
-    </li>
-  </ul>
-  </section>
-  <section>
-    <section class="services">
-      <h2 class="visualli hidden">Каталог гостиниц</h2>
-      <h3 class="services-title">Заинтересовались?</h3>
-      <p class="services-title">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-  <span class="visualli hidden">Поиск гостиниц</span>
-  <a class="button" href="catalog.html">ПОИСК ГОСТИНИЦЫ В седоне</a>
-  </section>
-  </section>
-  </main>
-  <footer class="page footer">
-    <section class="newslatter">
-      <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
-      <p class="page-footer-title">Только полезная информация и никакого спама, честное бойскаутское!</p>
-      <form class="newslatter-form" action="https://echo.htmlacademy.ru/." method="post">
-        <input class="field" placeholder="Ваш e-mail" type="email" name="newslatter-email" id="newslatter-email" required>
-        <button class="button newslatter-button" type="submit">Подписаться</button>
-      </form>
-    <section class="footer-social">
-      <ul class="footer-social-list">
-        <li class="footer-social-item">
-          <a class="button" href="#">
-            <span class="visualli-hidden">Вконтакте</span>
-          </a>
-        </li>
-        <li class="footer-social-item">
-          <a class="button" href="#">
-            <span class="visualli-hidden">Телеграм</span>
-          </a>
-        </li>
-        <li class="footer-social-item">
-          <a class="button" href="#">
-            <span class="visualli-hidden">Ютуб</span>
-          </a>
-        </li>
-      </ul>
-    </section>
-    <section class="footer-contacts">
-      <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-  <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+            </li>
+            <li class="footer-social-item">
+              <a class="button" href="#">
+                <span class="visualli-hidden">Телеграм</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="button" href="#">
+                <span class="visualli-hidden">Ютуб</span>
+              </a>
+            </li>
+          </ul>
+        </section>
+        <section class="footer-contacts">
+          <a class="footer-contacts-address-phone" href="tel:+78128121212"
+            >+7 (812) 812-12-12</a
+          >
+          <a class="htmlacademy-link" href="https://htmlacademy.ru/"
+            >.html academy</a
+          >
+        </section>
       </section>
-      </section>
-      </footer>
+    </footer>
   </body>
 </html>
