--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <body>
     <header class="page-header">
       <nav class="navigation">
+        <a class="navigation-logo" href="index.html">
+          <img class="page-header-logo" alt="Логотип город Седона" src="" />
+        </a>
         <ul class="navigation-list">
           <li class="navigtion-item">
             <a class="navigation-link" href="#">Главная</a>
@@ -31,7 +34,7 @@
           </li>
           <li class="navigtion-item">
             <a class="navigation-link" href="#">
-  <span class="visually-hidden">Забронировать</span>
+              <span class="visually-hidden">Забронировать</span>
             </a>
           </li>
         </ul>
@@ -83,25 +86,25 @@
             <img src="#" alt="Мост дьявола" />
           </li>
         </ul>
-        <ul class="advatages-item">
-          <li class="advatages-item">
+        <ul class="services-item">
+          <li class="servies-item">
             <img src="#" alt="" />
-            <h3 class="advantages-title">Жилье</h3>
-            <p class="advantages-text">
+            <h3 class="services-title">Жилье</h3>
+            <p class="servcies-text">
               Рекомендуем пожить в настоящем мотеле, всё как в кино!
             </p>
           </li>
-          <li class="advatages-item">
+          <li class="servcies-item">
             <img src="#" alt="" />
-            <h3 class="advantages-title">Еда</h3>
-            <p class="advantages-text">
+            <h3 class="servcies-title">Еда</h3>
+            <p class="services-text">
               Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
             </p>
           </li>
-          <li class="advatages-item">
+          <li class="servcies-item">
             <img src="#" alt="" />
-            <h3 class="advantages-title">Сувениры</h3>
-            <p class="advantages-text">
+            <h3 class="servcies-title">Сувениры</h3>
+            <p class="servcies-text">
               Не только китайского, но и настоящего местного производства!
             </p>
           </li>
@@ -163,9 +166,11 @@
           </ul>
         </section>
         <section class="footer-contacts">
-          <a class="footer-contacts-address-phone" href="tel:+78128121212"
+          <a class="footer-contacts-phone" href="tel:+78128121212"
             >+7 (812) 812-12-12</a
           >
+        </section>
+        <section class="footer-contacts">
           <a class="htmlacademy-link" href="https://htmlacademy.ru/"
             >.html academy</a
           >
