разделяет секции в файле каталог

--- a/catalog.html
+++ b/catalog.html
@@ -268,10 +268,11 @@
             </li>
           </ul>
         </section>
-        <section class="footer-contacts">
+        <section class="footer-contacts-phone">
           <a class="footer-contacts-address-phone" href="tel:+78128121212"
             >+7 (812) 812-12-12</a
           >
+          <section class="footer-contacts">
           <a class="htmlacademy-link" href="https://htmlacademy.ru/"
             >.html academy</a
           >
