--- a/catalog.html
+++ b/catalog.html
@@ -6,10 +6,16 @@
   </head>
   <body>
     <header class="page-header">
+      <a class="logo-link" href="index.html">
+        <img
+          class="logo"
+          alt="Логотип город Седона"
+          src="images/logo.svg"
+          width="138"
+          height="64"
+        />
+      </a>
       <nav class="navigation">
-        <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" alt="Логотип город Седона" src="" />
-        </a>
         <ul class="navigation-list">
           <li class="navigtion-item">
             <a class="navigation-link" href="#">Главная</a>
@@ -153,7 +159,13 @@
         <ul class="hotel-list">
           <li class="hotel-card">
             <a class="hotel-card-link" href="catalog.html">
-              <img class="hotel-card-image" src="" alt="" />
+              <img
+                class="hotel-card-image"
+                src="images/hotels/hotel-1.jpg"
+                alt=""
+                width="300"
+                height="212"
+              />
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
             <p>Гостиница</p>
@@ -165,7 +177,13 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="catalog.html">
-              <img class="hotel-card-image" src="" alt="" />
+              <img
+                class="hotel-card-image"
+                src="images/hotels/hotel-2.jpg"
+                alt=""
+                width="300"
+                height="212"
+              />
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
             <p>Гостиница</p>
@@ -177,7 +195,13 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="catalog.html">
-              <img class="hotel-card-image" src="" alt="" />
+              <img
+                class="hotel-card-image"
+                src="images/hotels/hotel-3.jpg"
+                alt=""
+                width="300"
+                height="212"
+              />
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
             <p>Гостиница</p>
@@ -189,7 +213,13 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="catalog.html">
-              <img class="hotel-card-image" src="" alt="" />
+              <img
+                class="hotel-card-image"
+                src="images/hotels/hotel-4.jpg"
+                alt=""
+                width="300"
+                height="212"
+              />
               <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
             <p>Гостиница</p>
@@ -253,17 +283,38 @@
             <li class="footer-social-item">
               <a class="button" href="#">
                 <span class="visualli-hidden">Вконтакте</span>
+                <img
+                  class="social"
+                  alt=""
+                  src="images/vkontakte.svg"
+                  width="24"
+                  height="14"
+                />
               </a>
             </li>
 
             <li class="footer-social-item">
               <a class="button" href="#">
                 <span class="visualli-hidden">Телеграм</span>
+                <img
+                  class="social"
+                  alt=""
+                  src="images/telegram.svg"
+                  width="18"
+                  height="15.1"
+                />
               </a>
             </li>
             <li class="footer-social-item">
               <a class="button" href="#">
                 <span class="visualli-hidden">Ютуб</span>
+                <img
+                  class="social"
+                  alt=""
+                  src="images/youtube.svg"
+                  width="22"
+                  height="17"
+                />
               </a>
             </li>
           </ul>
@@ -273,9 +324,17 @@
             >+7 (812) 812-12-12</a
           >
           <section class="footer-contacts">
-          <a class="htmlacademy-link" href="https://htmlacademy.ru/"
-            >.html academy</a
-          >
+            <a class="htmlacademy-link" href="https://htmlacademy.ru/"
+              >.html academy</a
+            >
+            <img
+              class="contacts"
+              alt="Сайт академии"
+              src="images/html.svg"
+              width="114.9"
+              height="32.9"
+            />
+          </section>
         </section>
       </section>
     </footer>
