--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
   </head>
   <body>
     <header class="page-header">
+      <a class="logo-link" href="index.html">
+        <img
+          class="logo"
+          alt="Логотип город Седона"
+          src="images/logo.svg"
+          width="138"
+          height="64"
+        />
+      </a>
       <nav class="navigation">
-        <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" alt="Логотип город Седона" src="" />
-        </a>
         <ul class="navigation-list">
           <li class="navigtion-item">
             <a class="navigation-link" href="#">Главная</a>
@@ -56,7 +62,12 @@
               Седона — не аттракцион для туристов, там течёт своя жизнь
             </p>
 
-            <img src="#" alt="Кафе в городе Седона" />
+            <img
+              src="images/cafe.jpg"
+              alt="Кафе в городе Седона"
+              width="800"
+              height="384"
+            />
           </li>
           <li class="avantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
@@ -83,26 +94,36 @@
             </p>
           </li>
           <li class="advantages-img">
-            <img src="#" alt="Мост дьявола" />
+            <img
+              src="images/bridge.jpg"
+              alt="Мост дьявола"
+              width="800"
+              height="384"
+            />
           </li>
         </ul>
         <ul class="services-item">
           <li class="servies-item">
-            <img src="#" alt="" />
+            <img src="/images/service/home.svg" alt="" width="75" height="72" />
             <h3 class="services-title">Жилье</h3>
             <p class="servcies-text">
               Рекомендуем пожить в настоящем мотеле, всё как в кино!
             </p>
           </li>
           <li class="servcies-item">
-            <img src="#" alt="" />
+            <img src="images/service/food.svg" alt="" width="74" height="70" />
             <h3 class="servcies-title">Еда</h3>
             <p class="services-text">
               Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
             </p>
           </li>
           <li class="servcies-item">
-            <img src="#" alt="" />
+            <img
+              src="images/service/present.svg"
+              alt=""
+              width="64"
+              height="76"
+            />
             <h3 class="servcies-title">Сувениры</h3>
             <p class="servcies-text">
               Не только китайского, но и настоящего местного производства!
@@ -112,7 +133,7 @@
       </section>
       <section>
         <section class="services">
-          <h2 class="visualli hidden">Каталог гостиниц</h2>
+          <h2 class="visualli hidden">Чудесные гостиницы в Седоне</h2>
           <h3 class="services-title">Заинтересовались?</h3>
           <p class="services-title">
             Укажите предполагаемые даты поездки, и мы покажем вам лучшие
@@ -131,7 +152,7 @@
         </p>
         <form
           class="newslatter-form"
-          action="https://echo.htmlacademy.ru/."
+          action="https://echo.htmlacademy.ru/"
           method="post"
         >
           <input
@@ -151,16 +172,37 @@
             <li class="footer-social-item">
               <a class="button" href="#">
                 <span class="visualli-hidden">Вконтакте</span>
+                <img
+                  class="social"
+                  alt=""
+                  src="images/vkontakte.svg"
+                  width="24"
+                  height="14"
+                />
               </a>
             </li>
             <li class="footer-social-item">
               <a class="button" href="#">
                 <span class="visualli-hidden">Телеграм</span>
+                <img
+                  class="social"
+                  alt=""
+                  src="images/telegram.svg"
+                  width="18"
+                  height="15.1"
+                />
               </a>
             </li>
             <li class="footer-social-item">
               <a class="button" href="#">
                 <span class="visualli-hidden">Ютуб</span>
+                <img
+                  class="social"
+                  alt=""
+                  src="images/youtube.svg"
+                  width="22"
+                  height="17"
+                />
               </a>
             </li>
           </ul>
@@ -174,6 +216,13 @@
           <a class="htmlacademy-link" href="https://htmlacademy.ru/"
             >.html academy</a
           >
+          <img
+            class="contacts"
+            alt="Сайт академии"
+            src="images/html.svg"
+            width="114.9"
+            height="32.9"
+          />
         </section>
       </section>
     </footer>
