--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Каталог</title>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <header class="page-header">
@@ -47,215 +48,218 @@
       </nav>
     </header>
     <main class="main-inner">
-      <header class="main-inner">
-        <h1 class="inner-header-title">Гостиницы Седоны</h1>
-        <ul class="breadcrumbs">
-          <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link" href="index.html"></a>
-            <span class="visualli-hidden">Главная</span>
-          </li>
-          <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link">Гостиницы</a>
-          </li>
-        </ul>
-      </header>
-      <section class="catalog-hotels">
-        <h2 class="visually-hidden">Список гостинец с фильтрами</h2>
-        <form
-          class="catalog-filter"
-          action="https://echo.htmlacademy.ru/"
-          method="get"
-        >
-          <fieldset class="catalog-filter-group">
-            <legend class="catalog-filter-title">Инфраструктура:</legend>
-            <ul class="catalog-filter-list">
-              <li class="catalog-filter-item">
-                <label class="control">
-                  <input
-                    class="control-input"
-                    type="checkbox"
-                    name="Swimming-pool"
-                    checked
-                  />
-                  Бассейн
-                </label>
-              </li>
-              <li class="catalog-filter-item">
-                <label class="control">
-                  <input
-                    class="control-input"
-                    type="checkbox"
-                    name="Parking"
-                    checked
-                  />
-                  Парковка
-                </label>
-              </li>
-              <li class="catalog-filter-item">
-                <label class="control">
-                  <input class="control-input" type="checkbox" name="Wi-fi" />
-                  Wi-fi
-                </label>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset class="catalog-filter-group">
-            <legend class="catalog-filter-title">Тип жилья:</legend>
-            <ul class="catalog-filter-list">
-              <li class="catalog-filter-item">
-                <label class="control">
-                  <input
-                    class="control-input"
-                    type="radio"
-                    name="type-housing"
-                    value="hotel"
-                    checked
-                  />
-                  Гостиница
-                </label>
-              </li>
-              <li class="catalog-filter-item">
-                <label class="control">
-                  <input
-                    class="control-input"
-                    type="radio"
-                    name="type-housing"
-                    value="motel"
-                  />
-                  Мотель
-                </label>
-              </li>
-              <li class="catalog-filter-item">
-                <label class="control">
-                  <input
-                    class="control-input"
-                    type="radio"
-                    name="type-housing"
-                    value="apartments"
-                  />
-                  Апартаменты
-                </label>
-              </li>
-            </ul>
-          </fieldset>
-          <button class="button" type="submit">Применить</button>
-          <button class="button" type="reset">Сбросить</button>
-        </form>
-        <p>Найдено гостиниц:<span>38</span></p>
-        <select class="select-control" aria-label="Сортировка">
-          <option value="popular">Сначало популярное</option>
-          <option value="cheap">Снчало дешевое</option>
-          <option value="expensive">Сначало дорогое</option>
-        </select>
-        <a href="#" class="button button-light">
-          <span class="visually-hidden">Показать карточки</span>
-        </a>
-        <a class="button" href="#">
-          <span class="visually-hidden">Показать список</span>
-        </a>
-        <a class="button" href="#">
-          <span class="visually-hidden">Показать колонкой</span>
-        </a>
-        <ul class="hotel-list">
-          <li class="hotel-card">
-            <a class="hotel-card-link" href="catalog.html">
-              <img
-                class="hotel-card-image"
-                src="images/hotels/hotel-1.jpg"
-                alt=""
-                width="300"
-                height="212"
-              />
-              <h3 class="hotel-card-title">Amara Resort & Spa</h3>
-            </a>
-            <p>Гостиница</p>
-            <b class="hotel-card-price">от 4000</b>
-            <a class="hotel-card-more-info button" href="#">Подробнее</a>
-            <a class="hotel-card-top button" href="#">В Избранное</a>
-            <p class="rating"><span class="visually-hidden">4 звезды</span></p>
-            <a class="button" href="#">Рейтинг:8,5</a>
-          </li>
-          <li class="hotel-card">
-            <a class="hotel-card-link" href="catalog.html">
-              <img
-                class="hotel-card-image"
-                src="images/hotels/hotel-2.jpg"
-                alt=""
-                width="300"
-                height="212"
-              />
-              <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
-            </a>
-            <p>Гостиница</p>
-            <b class="hotel-card-price">от 5000</b>
-            <a class="hotel-card-more-info button" href="#">Подробнее</a>
-            <a class="hotel-card-top button" href="#">В Избранное</a>
-            <p class="rating"><span class="visually-hidden">4 звезды</span></p>
-            <a class="button" href="#">Рейтинг:9,2</a>
-          </li>
-          <li class="hotel-card">
-            <a class="hotel-card-link" href="catalog.html">
-              <img
-                class="hotel-card-image"
-                src="images/hotels/hotel-3.jpg"
-                alt=""
-                width="300"
-                height="212"
-              />
-              <h3 class="hotel-card-title">Desert Quail Inn</h3>
-            </a>
-            <p>Гостиница</p>
-            <b class="hotel-card-price">от 2500</b>
-            <a class="hotel-card-more-info button" href="#">Подробнее</a>
-            <a class="hotel-card-top button" href="#">В Избранное</a>
-            <p class="rating"><span class="visually-hidden">3 звезды</span></p>
-            <a class="button" href="#">Рейтинг:6,9</a>
-          </li>
-          <li class="hotel-card">
-            <a class="hotel-card-link" href="catalog.html">
-              <img
-                class="hotel-card-image"
-                src="images/hotels/hotel-4.jpg"
-                alt=""
-                width="300"
-                height="212"
-              />
-              <h3 class="hotel-card-title">GreenTree Inn</h3>
-            </a>
-            <p>Гостиница</p>
-            <b class="hotel-card-price">от 1500</b>
-            <a class="hotel-card-more-info button" href="#">Подробнее</a>
-            <a class="hotel-card-top button" href="#">В Избранное</a>
-            <p class="rating"><span class="visually-hidden">2 звезды</span></p>
-            <a class="button" href="#">Рейтинг:5,0</a>
-          </li>
-        </ul>
-        <ul class="pagination">
-          <li class="pagination-item">
-            <a class="pagination-link pagination-prev pagination-disabled">
-              <span class="visually-hidden">Предыдущая страница</span>
-            </a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link pagination-current">1</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">2</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">3</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">4</a>
-          </li>
-          <li class="pagination-item">...</li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">10</a>
-          </li>
-        </ul>
-      </section>
+      <div class="sorting-container">
+        <header class="main-inner">
+          <h1 class="inner-header-title">Гостиницы Седоны</h1>
+          <ul class="breadcrumbs">
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link" href="index.html"></a>
+              <span class="visualli-hidden">Главная</span>
+            </li>
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link">Гостиницы</a>
+            </li>
+          </ul>
+        </header>
+        <section class="catalog-hotels">
+          <h2 class="visually-hidden">Список гостинец с фильтрами</h2>
+          <form
+            class="catalog-filter"
+            action="https://echo.htmlacademy.ru/"
+            method="get"
+          >
+            <fieldset class="catalog-filter-group">
+              <legend class="catalog-filter-title">Инфраструктура:</legend>
+              <ul class="catalog-filter-list">
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input
+                      class="control-input"
+                      type="checkbox"
+                      name="Swimming-pool"
+                      checked
+                    />
+                    Бассейн
+                  </label>
+                </li>
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input
+                      class="control-input"
+                      type="checkbox"
+                      name="Parking"
+                      checked
+                    />
+                    Парковка
+                  </label>
+                </li>
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="control-input" type="checkbox" name="Wi-fi" />
+                    Wi-fi
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset class="catalog-filter-group">
+              <legend class="catalog-filter-title">Тип жилья:</legend>
+              <ul class="catalog-filter-list">
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input
+                      class="control-input"
+                      type="radio"
+                      name="type-housing"
+                      value="hotel"
+                      checked
+                    />
+                    Гостиница
+                  </label>
+                </li>
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input
+                      class="control-input"
+                      type="radio"
+                      name="type-housing"
+                      value="motel"
+                    />
+                    Мотель
+                  </label>
+                </li>
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input
+                      class="control-input"
+                      type="radio"
+                      name="type-housing"
+                      value="apartments"
+                    />
+                    Апартаменты
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+            <button class="button submit" type="submit">Применить</button>
+            <button class="button" type="reset">Сбросить</button>
+          </form>
+        </section>
+      </div>
+      <p>Найдено гостиниц:<span>38</span></p>
+
+      <select class="select-control" aria-label="Сортировка">
+        <option value="popular">Сначало популярное</option>
+        <option value="cheap">Снчало дешевое</option>
+        <option value="expensive">Сначало дорогое</option>
+      </select>
+      <a href="#" class="button button-light">
+        <span class="visually-hidden">Показать карточки</span>
+      </a>
+      <a class="button" href="#">
+        <span class="visually-hidden">Показать список</span>
+      </a>
+      <a class="button" href="#">
+        <span class="visually-hidden">Показать колонкой</span>
+      </a>
+      <ul class="hotel-list">
+        <li class="hotel-card">
+          <a class="hotel-card-link" href="catalog.html">
+            <img
+              class="hotel-card-image"
+              src="images/hotels/hotel-1.jpg"
+              alt=""
+              width="300"
+              height="212"
+            />
+            <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+          </a>
+          <p>Гостиница</p>
+          <b class="hotel-card-price">от 4000</b>
+          <a class="hotel-card-more-info button" href="#">Подробнее</a>
+          <a class="hotel-card-top button" href="#">В Избранное</a>
+          <p class="rating"><span class="visually-hidden">4 звезды</span></p>
+          <a class="button rating" href="#">Рейтинг:8,5</a>
+        </li>
+        <li class="hotel-card">
+          <a class="hotel-card-link" href="catalog.html">
+            <img
+              class="hotel-card-image"
+              src="images/hotels/hotel-2.jpg"
+              alt=""
+              width="300"
+              height="212"
+            />
+            <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+          </a>
+          <p>Гостиница</p>
+          <b class="hotel-card-price">от 5000</b>
+          <a class="hotel-card-more-info button" href="#">Подробнее</a>
+          <a class="hotel-card-top button" href="#">В Избранное</a>
+          <p class="rating"><span class="visually-hidden">4 звезды</span></p>
+          <a class="button" href="#">Рейтинг:9,2</a>
+        </li>
+        <li class="hotel-card">
+          <a class="hotel-card-link" href="catalog.html">
+            <img
+              class="hotel-card-image"
+              src="images/hotels/hotel-3.jpg"
+              alt=""
+              width="300"
+              height="212"
+            />
+            <h3 class="hotel-card-title">Desert Quail Inn</h3>
+          </a>
+          <p>Гостиница</p>
+          <b class="hotel-card-price">от 2500</b>
+          <a class="hotel-card-more-info button" href="#">Подробнее</a>
+          <a class="hotel-card-top button" href="#">В Избранное</a>
+          <p class="rating"><span class="visually-hidden">3 звезды</span></p>
+          <a class="button" href="#">Рейтинг:6,9</a>
+        </li>
+        <li class="hotel-card">
+          <a class="hotel-card-link" href="catalog.html">
+            <img
+              class="hotel-card-image"
+              src="images/hotels/hotel-4.jpg"
+              alt=""
+              width="300"
+              height="212"
+            />
+            <h3 class="hotel-card-title">GreenTree Inn</h3>
+          </a>
+          <p>Гостиница</p>
+          <b class="hotel-card-price">от 1500</b>
+          <a class="hotel-card-more-info button" href="#">Подробнее</a>
+          <a class="hotel-card-top button" href="#">В Избранное</a>
+          <p class="rating"><span class="visually-hidden">2 звезды</span></p>
+          <a class="button" href="#">Рейтинг:5,0</a>
+        </li>
+      </ul>
+      <ul class="pagination">
+        <li class="pagination-item">
+          <a class="pagination-link pagination-prev pagination-disabled">
+            <span class="visually-hidden">Предыдущая страница</span>
+          </a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link pagination-current">1</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">2</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">3</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">4</a>
+        </li>
+        <li class="pagination-item">...</li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">10</a>
+        </li>
+      </ul>
     </main>
-    <footer class="page footer">
+    <footer class="page-footer catalog-footer">
       <section class="newslatter">
         <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
         <p class="page-footer-title">
