:heavy_check_mark: Сборка #4

--- a/4/index.html
+++ b/4/index.html
@@ -51,6 +51,7 @@
 
     <main class="main-index">
       <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
+      <div class="main-banner"></div>
       <img class="logo" src="" alt="логотип Седона" />
       <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
       <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
